[gd_scene load_steps=2 format=3 uid="uid://c2hlbi8d8hiue"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_gxuwj"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_gxuwj")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="Shade" type="ColorRect" parent="."]
offset_right = 1088.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0.784314)

[node name="SecondShade" type="ColorRect" parent="."]
offset_left = 192.0
offset_top = 64.0
offset_right = 896.0
offset_bottom = 576.0
color = Color(0, 0, 0, 0.784314)

[node name="Menu Header" type="RichTextLabel" parent="."]
offset_left = 320.0
offset_top = 112.0
offset_right = 768.0
offset_bottom = 152.0
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Pause Menu[/center]

"
scroll_active = false

[node name="VolumeControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -35.0
offset_top = 21.0
offset_right = 5.0
offset_bottom = 61.0

[node name="MusicVolumeLabel" type="RichTextLabel" parent="VolumeControls"]
layout_mode = 0
offset_left = 456.0
offset_top = 168.0
offset_right = 584.0
offset_bottom = 192.0
bbcode_enabled = true
text = "[right]Music Volume:[/right]"

[node name="SoundEffectsLabel" type="RichTextLabel" parent="VolumeControls"]
layout_mode = 0
offset_left = 472.0
offset_top = 198.0
offset_right = 584.0
offset_bottom = 222.0
bbcode_enabled = true
text = "[right]Effects Volume:[/right]"
scroll_active = false

[node name="MusicVolumeSlider" type="HSlider" parent="VolumeControls"]
layout_mode = 0
offset_left = 592.0
offset_top = 164.0
offset_right = 679.0
offset_bottom = 188.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="SoundEffectsVolumeSlider" type="HSlider" parent="VolumeControls"]
layout_mode = 0
offset_left = 592.0
offset_top = 194.0
offset_right = 679.0
offset_bottom = 218.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="MouseDisablerLabel" type="RichTextLabel" parent="."]
offset_left = 424.0
offset_top = 249.0
offset_right = 567.0
offset_bottom = 273.0
bbcode_enabled = true
text = "[right]Accesibility Controls:[/right]"
scroll_active = false

[node name="DisableToggle" type="CheckButton" parent="."]
offset_left = 569.0
offset_top = 246.0
offset_right = 668.0
offset_bottom = 272.0
theme_override_constants/check_v_offset = -2
text = "Auto"

[node name="MouseDisablerDescription" type="RichTextLabel" parent="."]
offset_left = 392.0
offset_top = 286.0
offset_right = 696.0
offset_bottom = 398.0
bbcode_enabled = true
text = "[center]Auto: Game will disable/enable keyboard and controller functionality dynamically based on controls being used.

Forced: Mouse use will not disable keyboard and controller functionality."
scroll_active = false

[node name="GiveUp" type="Button" parent="."]
offset_left = 424.0
offset_top = 436.0
offset_right = 535.0
offset_bottom = 476.0
theme_override_constants/align_to_largest_stylebox = 0
text = "Give Up"

[node name="Return" type="Button" parent="."]
offset_left = 552.0
offset_top = 436.0
offset_right = 663.0
offset_bottom = 476.0
text = "Return"

[connection signal="value_changed" from="VolumeControls/MusicVolumeSlider" to="." method="_music_volume_changed"]
[connection signal="value_changed" from="VolumeControls/SoundEffectsVolumeSlider" to="." method="_effects_volume_changed"]
[connection signal="toggled" from="DisableToggle" to="." method="_on_disable_toggle_toggled"]
[connection signal="pressed" from="GiveUp" to="." method="_on_give_up_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
